# compiler

./: LICENSE  cabal.project  compiler.cabal  dune-project
app/: HR.hs  Parser.hs  Qualifiers.hs  Syntax.hs
app/Grammar/: Combinators.hs  Lexer.hs  Parser.hs
compiler/: ast.ml  diagn.ml  dune  lexer.mll  parser.mly
test/: LexerSpec.hs
