cabal-version:      3.0

name:               compiler

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

license:            MIT
license-file:       LICENSE
author:             mp2720
category:           Language
build-type:         Simple

common shared-properties
    ghc-options: -Wall
    default-language: Haskell2010
    build-depends:    base ^>=4.17.2.1

library
    import: shared-properties
    exposed-modules: Grammar.Syntax Grammar.Combinators Grammar.Lexer HR Qualifiers
    hs-source-dirs: app

executable compiler
    import: shared-properties
    main-is:          Main.hs
    -- other-modules: Grammar.Grammar Grammar.Combinators Grammar.Lexer HR Qualifiers
    hs-source-dirs:   app
    build-depends: compiler

Test-suite test
    import: shared-properties
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules: LexerSpec
    build-depends: hspec ^>= 2.11.12, hspec-discover ^>= 2.11.12, compiler
    build-tool-depends: hspec-discover:hspec-discover ^>= 2.11.12
